<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_200"
        android:elevation="@dimen/padding_32"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backdrop_image_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_200"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_200"
                android:background="@drawable/image_view_scrim" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_poster_image_details"
                android:layout_width="@dimen/padding_120"
                android:layout_height="@dimen/padding_160"
                android:layout_marginStart="@dimen/padding_8"
                android:layout_marginTop="@dimen/padding_8"
                android:contentDescription="@string/label_content_description_poster"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8"
                android:layout_marginEnd="@dimen/padding_2"
                app:constraint_referenced_ids="text_view_movie_title,rating_bar_movie_avg" />

            <TextView
                android:id="@+id/text_view_movie_title"
                android:layout_width="@dimen/padding_160"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:text="@string/label_default"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="@id/rating_bar_movie_avg"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/movie_title_dummy_text" />

            <RatingBar
                android:id="@+id/rating_bar_movie_avg"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/padding_8"
                android:isIndicator="true"
                android:stepSize="0.1"
                app:layout_constraintLeft_toRightOf="@id/iv_poster_image_details"
                app:layout_constraintTop_toBottomOf="@id/text_view_movie_title"
                tools:rating="2.5" />

            <TextView
                android:id="@+id/text_view_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/label_default"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textSize="@dimen/text_16"
                app:layout_constraintLeft_toLeftOf="@id/rating_bar_movie_avg"
                app:layout_constraintTop_toBottomOf="@id/rating_bar_movie_avg"
                tools:text="@string/movie_release_date_dummy_text" />


            <TextView
                android:id="@+id/tv_label_overview"
                style="@style/DetailViewMarginStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/label_overview"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster_image_details" />

            <TextView
                android:id="@+id/text_view_overview"
                style="@style/DetailViewMarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/label_default"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_label_overview"
                tools:text="@string/label_default" />

            <TextView
                android:id="@+id/tv_label_reviews"
                style="@style/DetailViewMarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_reviews"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_reviews" />

            <TextView
                android:id="@+id/tv_no_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_16"
                android:text="@string/error_review_unavailable"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_reviews" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>